cluster/apps/omada/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: omada
  namespace: omada
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - omada.${domain_name}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: omada-controller-main
          port: 8043
